scenarios/uc19-network-graphs/mini-contacts/kustomize/frontend/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mini-contacts-frontend
  labels:
    app.kubernetes.io/name: mini-contacts
    app.kubernetes.io/component: frontend
