scenarios/uc19-network-graphs/mini-contacts/kustomize/frontend/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels: { app: api }
spec:
  selector: { app: api }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels: { app: frontend }
spec:
  selector: { app: frontend }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
