scenarios/uc19-network-graphs/mini-contacts/kustomize/frontend/resources/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  to: { kind: Service, name: frontend, weight: 100 }
  port: { targetPort: http }
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
